--- a/src/main/resources/templates/weights.html
+++ b/src/main/resources/templates/weights.html
@@ -22,7 +22,7 @@
     <!--/*@thymesVar id="weights" type="com.dzikuseko2.reduction_app.Weight"*/-->
     <fieldset>
     <dl th:each="weight : ${weights}">
-        <li th:text="|${weight.date} ${weight.bodyWeight} ${weight.description}|"></li>
+        <li th:text="|${weight.dateWeight} ${weight.bodyw} ${weight.description}|"></li>
     </dl>
     </fieldset>
     <br>
@@ -37,8 +37,8 @@
         </thead>
         <tbody>
             <tr th:each="weight : ${weights}">
-                <td><span th:text="${weight.date}">Data</span></td>
-                <td><span th:text="${weight.bodyWeight}">Waga</span></td>
+                <td><span th:text="${weight.dateWeight}">Data</span></td>
+                <td><span th:text="${weight.bodyw}">Waga</span></td>
                 <td><span th:text="${weight.description}">Opis</span></td>
                 <td><span th:text="${weight.id}">Id</span></td>
             </tr>
@@ -50,11 +50,11 @@
         <!--/*@thymesVar id="weight" type="com.dzikuseko2.reduction_app.Weight"*/-->
         <form action="#" method="post" th:action="@{/weights}" th:object="${weight}">
             <label>Data wpisu
-                <input type="date" th:field="*{date}"/>
+                <input type="date" th:field="*{dateWeight}"/>
             </label>
             <br>
             <label>Waga
-                <input type="number" inputmode="decimal" min=0  step=0.1 th:field="*{bodyWeight}"/>
+                <input type="number" th:field="*{bodyw}"/>
             </label>
             <br>
             <label>Opis
