po dodniu wpisu wysiwetla komunikat i ten nowy wpis (narazei z metody toString)

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
     <title>Reduction app</title>
 </head>
 <body>
-<a href="http://localhost:8080/weights">Zapisany rejestr</a>
+<a href="weights">Zapisany rejest</a>
 
 </body>
 </html>
